--- a/variable.html
+++ b/variable.html
@@ -1,1 +1,19 @@
-test
+<script>
+// 변수 Create
+let v1 = true;
+let v2 = 100;
+let v3 = 'abc';
+
+// 변수 Read
+console.log(v1, v2, v3);
+
+// 변수 Update
+v1 = false;
+v2 = -10;
+v3 = 'def';
+
+// 변수 Read
+console.log(v1, v2, v3);
+
+// 변수 Delete
+</script>
