변수를 사용하는 이유 2번

--- a/variable.html
+++ b/variable.html
@@ -1,19 +1,28 @@
 <script>
-// 변수 Create
-let v1 = true;
-let v2 = 100;
-let v3 = 'abc';
+// // 변수 Create
+// let v1 = true;
+// let v2 = 100;
+// let v3 = 'abc';
 
-// 변수 Read
-console.log(v1, v2, v3);
+// // 변수 Read
+// console.log(v1, v2, v3);
 
-// 변수 Update
-v1 = false;
-v2 = -10;
-v3 = 'def';
+// // 변수 Update
+// v1 = false;
+// v2 = -10;
+// v3 = 'def';
 
-// 변수 Read
-console.log(v1, v2, v3);
+// // 변수 Read
+// console.log(v1, v2, v3);
 
-// 변수 Delete
+// // 변수 Delete
+
+debugger;
+console.log(1 + 2 + 3);
+let num1 = 1;
+let num2 = 2;
+let num3 = 3;
+let sum1 = num1 + num2;
+let sum2 = sum1 + num3;
+console.log(sum2);
 </script>
