--- a/variable.html
+++ b/variable.html
@@ -16,13 +16,18 @@
 // console.log(v1, v2, v3);
 
 // // 변수 Delete
-
-debugger;
-console.log(1 + 2 + 3);
-let num1 = 1;
-let num2 = 2;
-let num3 = 3;
-let sum1 = num1 + num2;
-let sum2 = sum1 + num3;
-console.log(sum2);
+// 
+// debugger;
+// console.log(1 + 2 + 3);
+// let num1 = 1;
+// let num2 = 2;
+// let num3 = 3;
+// let sum1 = num1 + num2;
+// let sum2 = sum1 + num3;
+// console.log(sum2);
+let calc = 20;
+console.log(calc + 10);
+console.log(calc - 10);
+console.log(calc * 10);
+console.log(calc / 10);
 </script>
