한줄에 변수 여러개 선언하기

--- a/variable.html
+++ b/variable.html
@@ -25,9 +25,10 @@
 // let sum1 = num1 + num2;
 // let sum2 = sum1 + num3;
 // console.log(sum2);
-let calc = 20;
-console.log(calc + 10);
-console.log(calc - 10);
-console.log(calc * 10);
-console.log(calc / 10);
+// let calc = 20;
+// console.log(calc + 10);
+// console.log(calc - 10);
+// console.log(calc * 10);
+// console.log(calc / 10);
+let a = 1,b = 2,c = 3;
 </script>
