==(동등 연산자) 연산자와 ===(일치 연산자) 연산자의 차이

--- a/Operator.html
+++ b/Operator.html
@@ -9,10 +9,25 @@
 
 //문제: 프리랜서 개발자가 월 500만원을 받고 있다. 3.3% 원천징수를 때고 받는 실수령액과 세금을 계산하라.
 
-const salary = 5000000;
-const rate = 3.3;
-let tax = salary * rate / 100;
-let realSalary = salary - tax;
+// const salary = 5000000;
+// const rate = 3.3;
+// let tax = salary * rate / 100;
+// let realSalary = salary - tax;
 
 // 힌트: 세금 계산식 = 급여 * 원천징수 / 100
+
+// let oNum1 = 1 == '1';
+// let oNum2 = 1 === '1';
+// let true1 = 1 == true;
+// let true2 = 1 === true;
+// let true3 = 1 != true;
+// let true4 = 1 !== true;
+// let false1 = 0 == false;
+// let false2 = 0 === false;
+// let char1 = true == 'true';
+// let char2 = true === 'true';
+
+// 문제: 1과 2를 일치 연산자로 비교 후에 상수 x에 넣고, x를 console.log로 찍어 보기
+const x = 1 === 2;
+console.log(x);
 </script>
