비교 연산자 (<, <=, >, >=)

--- a/Operator.html
+++ b/Operator.html
@@ -28,6 +28,11 @@
 // let char2 = true === 'true';
 
 // 문제: 1과 2를 일치 연산자로 비교 후에 상수 x에 넣고, x를 console.log로 찍어 보기
-const x = 1 === 2;
-console.log(x);
+// const x = 1 === 2;
+// console.log(x);
+
+let compare1 = 1 < 1;
+let compare2 = 2 <= 2;
+let compare3 = 3 > 3;
+let compare4 = 4 >= 4;
 </script>
