논리 연산자 (&&, ||)

--- a/Operator.html
+++ b/Operator.html
@@ -31,8 +31,11 @@
 // const x = 1 === 2;
 // console.log(x);
 
-let compare1 = 1 < 1;
-let compare2 = 2 <= 2;
-let compare3 = 3 > 3;
-let compare4 = 4 >= 4;
+// let compare1 = 1 < 1;
+// let compare2 = 2 <= 2;
+// let compare3 = 3 > 3;
+// let compare4 = 4 >= 4;
+
+let logical1 = true && true;
+let logical2 = false || false;
 </script>
