--- a/Operator.html
+++ b/Operator.html
@@ -27,15 +27,28 @@
 // let char1 = true == 'true';
 // let char2 = true === 'true';
 
-// 문제: 1과 2를 일치 연산자로 비교 후에 상수 x에 넣고, x를 console.log로 찍어 보기
-// const x = 1 === 2;
-// console.log(x);
-
 // let compare1 = 1 < 1;
 // let compare2 = 2 <= 2;
 // let compare3 = 3 > 3;
 // let compare4 = 4 >= 4;
 
-let logical1 = true && true;
-let logical2 = false || false;
+// let logical1 = true && true;
+// let logical2 = false || false;
+
+// let logical3 = true && 'abc';
+// let logical4 = false || 'def';
+
+// let roundBracket1 = 1 + 2 * 3;
+// let roundBracket2 = (1 + 2) * 3;
+// let roundBracket3 = ((1 + 2) * 3);
+
+// 문제: 1과 2를 일치 연산자로 비교 후에 상수 x에 넣고, x를 console.log로 찍어 보기
+// const x = 1 === 2;
+// console.log(x);
+
+
+// 문제: 소괄호 연산자 안에서 true와 false를 일치 연산자로 연산 후에 상수 y에 넣고, y를 console.log로 찍어 보기
+const y = (true === false);
+console.log(y);
+
 </script>
