--- a/if.html
+++ b/if.html
@@ -10,15 +10,27 @@
 //   console.log('거짓');
 // }
 
-let d1;
-// 선언 하고 값을 넣지 않으면 undefined
-let d2 = null;
-// 선언 하고 null 값을 넣으면 null
-let condition1 = d1 == d2;
-let condition2 = d1 === d2;
-if (condition2) {
-  console.log('참');
-} else {
-  console.log('거짓');
-}
+// let d1;
+// // 선언 하고 값을 넣지 않으면 undefined
+// let d2 = null;
+// // 선언 하고 null 값을 넣으면 null
+// let condition1 = d1 == d2;
+// let condition2 = d1 === d2;
+// if (condition2) {
+//   console.log('참');
+// } else {
+//   console.log('거짓');
+// }
+
+// 문제: 조건이 1 === 1인 if문을 만들고, 참인 경우 console.log('참');을 찍어 보기
+
+// if (1 === 1) {
+//     console.log('참');
+// }
+
+// const condition3 = 1 === 2 ? 'a' : 'b';
+
+// 문제: 조건이 2 === 3인 3항 연산자문을 만들고, 참인 경우 'c' 거짓인 경우 'd'를 condition4 상수에 넣어 보기
+
+const condition4 = 2 === 3 ? 'c' : 'd';
 </script>
